--- a/style.css
+++ b/style.css
@@ -207,7 +207,6 @@ color: #000;  Sets the text hover color on navbar
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6uRT01uLtzhxFSp3Lx_VD3eAmNd4pAvEOBeC_GazfPcjk9iH0JA);
 }
 
-
 .how-trans-background {
     width: 90%;
     padding: 20px 15px;
@@ -234,8 +233,7 @@ color: #000;  Sets the text hover color on navbar
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-    height: 200px;
+    justify-content: space-between;
 }
 
 .how-it-works img {
@@ -245,12 +243,22 @@ color: #000;  Sets the text hover color on navbar
 
 .how-it-works p {
     text-align:  center;
-    padding-top: 30px;
+}
+
+.head-p {
+    margin-top: 30px;
 }
 
 .how-sub-para {
     font-size: 1.4em;
     margin-top: 80px;
+}
+
+.sub-para-p {
+    color: #333333;
+    font-size: .8em;
+    margin-bottom: 50px;
+    padding-top: 20px;
 }
 
 .how-titled {
@@ -376,7 +384,7 @@ color: #000;  Sets the text hover color on navbar
 }
 
 .insImg {
-    padding: 25px 0;
+    max-width: 100%;
 }
 
 .border {
