--- a/style.css
+++ b/style.css
@@ -24,15 +24,6 @@ h1, h2, h3 {
     text-align: center;
 }
 
-.arrow {
-    text-align: center;
-}
-    
-.arrow-img {
-    max-width: 30px;
-    padding-bottom: 30px;
-}
-
 /********/
 /*NAVBAR*/
 /********/
@@ -145,6 +136,7 @@ color: #000;  Sets the text hover color on navbar
     background-repeat: no-repeat;
     background-position: top;
     margin-top: 0px;
+    height: 100vh;
 }
 
 .home-color {
@@ -172,7 +164,7 @@ color: #000;  Sets the text hover color on navbar
 }
 
 .home-content p {
-    font-size: 14px;
+    font-size: 16px;
     letter-spacing: 1.1px;
 }
 
@@ -203,26 +195,14 @@ color: #000;  Sets the text hover color on navbar
     letter-spacing: 3.5px;
 }
 
-.how-background {
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6uRT01uLtzhxFSp3Lx_VD3eAmNd4pAvEOBeC_GazfPcjk9iH0JA);
-}
-
-.how-trans-background {
-    width: 90%;
-    padding: 20px 15px;
-    margin: auto;
-    background: rgba(255, 255, 255, .97);
-}
-
 .header-space {
     padding: 40px 0;
 }
 .how-top-color {
     width: 100%;
-    height: 10vh;
+    height: 14vh;
     background-color: rgb(40,40,41);
-    box-shadow: 0px 15px 8px #888888;
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUuWmXEfPoUgxL3zyh89eQmIfHqkm_WggRfOIQ3hDmC3xq58exTg)
+    box-shadow: 0px 2px 1px #888888;
 }
 
 .how-header {
@@ -316,10 +296,10 @@ color: #000;  Sets the text hover color on navbar
 
 .ins-top-color {
     width: 100%;
-    height: 10vh;
-    background-color: #404042;
-    box-shadow: 0px 4px 3px #888888;
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUuWmXEfPoUgxL3zyh89eQmIfHqkm_WggRfOIQ3hDmC3xq58exTg)
+    height: 14vh;
+    background-color: rgb(40,40,41);
+    box-shadow: 0px 2px 1px #888888;
+    box-shadow: 0px -2px 1px #888888;
 }
 
 .search {
@@ -423,9 +403,9 @@ color: #000;  Sets the text hover color on navbar
 
 .about-top-color {
     width: 100%;
-    height: 10vh;
+    height: 14vh;
     background-color: rgba(64, 64, 66, 0.6);
-    box-shadow: 0px 4px 3px #888888;
+    box-shadow: 0px 2px 1px #888888;
     display: inline-flex;
 }
 
@@ -448,9 +428,11 @@ color: #000;  Sets the text hover color on navbar
     margin: auto;
     
 }
+/*
 .about-background {
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOsA0t7Zf8zj9lMjcDPnqiEGvvx7RJ45z_yeeaUobWXoeV703b);
 }
+*/
 
 .about-content {
     padding: 4% 0%;
@@ -468,7 +450,7 @@ color: #000;  Sets the text hover color on navbar
 .footer {
     height: 10vh;
     background-color: #282829;
-    box-shadow: 4px 4px 3px #888888;
+    box-shadow: 0px -3px 2px #888888;
     color: #fcfcfc;
     text-shadow: 1px 1px .5px #464947;
     text-align: center;
